test/parser/should_fail/expr_space2.souc.bad
; the whitespace in this expression is bad!
bad_spaced(x) = x +3

main() = do
    lol_hosed x
